--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "setup-dev": "node scripts/setup-dev.js",
+    "seed": "node -e \"require('./controllers/seedController').seedDatabase({}, {status: (code) => ({json: (data) => {console.log('Seed result:', data); process.exit(0);}})})\"",
+    "reset-dev": "npm run seed && npm run dev"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +20,15 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^8.0.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
